<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="#E4E4E4"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCircleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.36"
                android:singleLine="true"
                android:scrollbars="horizontal"
                android:hint="@string/hint_circle_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnAddCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_circle"
                app:layout_constraintTop_toBottomOf="@id/etCircleName"
                app:layout_constraintEnd_toStartOf="@id/btnRemoveCircle" />

            <Button
                android:id="@+id/btnRemoveCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/remove_circle"
                android:enabled="false"
                app:layout_constraintTop_toBottomOf="@id/etCircleName"
                app:layout_constraintEnd_toEndOf="@id/etCircleName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/circlesList"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/btnAddCircle" />

            <LinearLayout
                android:id="@+id/selectCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/circlesList">

                <TextView
                    android:id="@+id/selectCircleId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/selectCircleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMemberName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.56"
                android:hint="@string/hint_member_name"
                app:layout_constraintTop_toBottomOf="@id/selectCircle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/etMemberLatitude"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMemberLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.22"
                android:inputType="numberDecimal"
                android:hint="@string/hint_latitude"
                app:layout_constraintTop_toTopOf="@id/etMemberName"
                app:layout_constraintStart_toEndOf="@id/etMemberName"
                app:layout_constraintEnd_toStartOf="@id/etMemberLongitude" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMemberLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.22"
                android:inputType="numberDecimal"
                android:hint="@string/hint_longitude"
                app:layout_constraintTop_toTopOf="@id/etMemberName"
                app:layout_constraintStart_toEndOf="@id/etMemberLatitude"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnAddMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_member"
                app:layout_constraintTop_toBottomOf="@id/etMemberLongitude"
                app:layout_constraintEnd_toStartOf="@id/btnRemoveMember" />

            <Button
                android:id="@+id/btnRemoveMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/remove_member"
                android:enabled="false"
                app:layout_constraintTop_toBottomOf="@id/etMemberLongitude"
                app:layout_constraintEnd_toEndOf="@id/etMemberLongitude" />

            <LinearLayout
                android:id="@+id/selectMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/btnRemoveMember">

                <TextView
                    android:id="@+id/selectMemberId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/selectMemberName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/membersList"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/selectMember" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.25"
                android:inputType="numberDecimal"
                android:hint="@string/hint_latitude"
                app:layout_constraintTop_toBottomOf="@id/membersList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/etLongitude" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.25"
                android:inputType="numberDecimal"
                android:hint="@string/hint_longitude"
                app:layout_constraintTop_toTopOf="@id/etLatitude"
                app:layout_constraintStart_toEndOf="@id/etLatitude"
                app:layout_constraintEnd_toEndOf="@id/etDistance" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.20"
                android:inputType="numberDecimal"
                android:hint="@string/hint_distance"
                app:layout_constraintTop_toTopOf="@id/etLatitude"
                app:layout_constraintStart_toEndOf="@id/etLongitude"
                app:layout_constraintEnd_toStartOf="@id/btnMemberDistanceFilter" />

            <Button
                android:id="@+id/btnMemberDistanceFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="0.30"
                android:layout_marginStart="8dp"
                android:text="@string/get_member"
                android:enabled="false"
                app:layout_constraintTop_toTopOf="@id/etLatitude"
                app:layout_constraintStart_toEndOf="@id/etDistance"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>